fix alert spacing issue

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -39,3 +39,8 @@
   float: right;
   border: 1px solid #000;
 }
+@media screen and (min-width: 1200px) {
+  .alert {
+    margin-top: 1.5em;
+  }
+}
